Correction des problèmes de contraste dans l'outil WAVE

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,11 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+
+.c-black {
+	color: #000;
+}
+
 .top-header {
 	background-color: white;
 	position: sticky;
@@ -103,7 +108,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 	cursor: pointer;
